--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -32,7 +32,9 @@
 
     <hr>
     <a href="{% url 'gerar_certificados' %}"><h5>Gerar Certificados</h5></a>
-    <a href="{% url 'certificados_submetidos' %}"><h5>Certificados Submetidos</h5></a>
+    <a href="{% url 'certificados_submetidos' %}"><h5>Listas de Certificados</h5></a>
+
+    <hr>
     <a href="{% url 'avisos_listar' %}"><h5>Agenda da Coordenação do PFE</h5></a>
 
     <p>&nbsp;</p>
