--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -9,15 +9,17 @@
 
   {% load static %}
 
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% with tabela='OrganizacoesTable' %}
+    {% include "tabelas.html" %}
+  {% endwith %}
 
 {% endblock %}
 
 {% block content %}
 
-  {% with dados='organizacoes' %}
+  {% comment %} {% with dados='organizacoes' %}
       {% include "planilhas.html" %}
-  {% endwith %}
+  {% endwith %} {% endcomment %}
 
   <span class="titulo">Organizações Parceiras</span>
 
@@ -26,11 +28,11 @@
       <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm">
         <thead class="table-info">
           <tr>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Organização</th>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Último<br>Contato</th>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Parceira<br>Desde</th>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Propostas<br>Enviadas</th>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projetos<br>Fechados</th>
+            <th scope="col" class="text-center">Organização</th>
+            <th scope="col" class="text-center">Último<br>Contato</th>
+            <th scope="col" class="text-center">Parceira<br>Desde</th>
+            <th scope="col" class="text-center">Propostas<br>Enviadas</th>
+            <th scope="col" class="text-center">Projetos<br>Fechados</th>
           </tr>
         </thead>
         {% for organizacao,fechados,desde,contato in organizacoes_list %} 
