--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -9,7 +9,9 @@
 
   {% load static %}
 
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% with tabela='ParceirosTable' %}
+    {% include "tabelas.html" %}
+  {% endwith %}
 
 {% endblock %}
 
@@ -25,11 +27,11 @@
       </caption>
       <thead class="table-info">
         <tr>
-          <th scope="col" onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
-          <th scope="col" onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Cargo</th>
-          <th scope="col" onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Organização</th>
-          <th scope="col" onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">e-mail</th>
-          <th scope="col" onclick="w3.sortHTML('#ParceirosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">telefone</th>
+          <th scope="col" class="text-center">Nome</th>
+          <th scope="col" class="text-center">Cargo</th>
+          <th scope="col" class="text-center">Organização</th>
+          <th scope="col" class="text-center">e-mail</th>
+          <th scope="col" class="text-center">telefone</th>
           <th scope="col" class="text-center">papel</th>
         </tr>
       </thead>
