--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -6,9 +6,9 @@
 {% endcomment %}
 
 {% block head %}
-  {% load static %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% with tabela='ProfessoresTable' %}
+    {% include "tabelas.html" %}
+  {% endwith %}
 {% endblock %}
 
 {% block content %}
@@ -17,14 +17,14 @@
 
   {% if professores %}
   <div class="table-responsive">
-    <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm">
+    <table id="ProfessoresTable" class="table table-bordered table-hover table-sm">
     <caption><small>usuários <u>sublinhados</u> são membros do comitê do PFE.</small> </caption>
     <thead class="table-info">
       <tr>
-        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
-        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">e-mail</th>
-        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Bancas</th>
-        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Orientações</th>
+        <th scope="col" class="text-center">Nome</th>
+        <th scope="col" class="text-center">e-mail</th>
+        <th scope="col" class="text-center">Bancas</th>
+        <th scope="col" class="text-center">Orientações</th>
         <th scope="col" class="text-center">Lattes</th>
       </tr>
       </thead>
