--- a/projetos/templates/projetos/comite_pfe.html
+++ b/projetos/templates/projetos/comite_pfe.html
@@ -6,11 +6,9 @@
 {% endcomment %}
 
 {% block head %}
-
-  {% load static %}
-
-  <script src="{% static 'js/w3.js' %}"></script>
-
+  {% with tabela='ComiteTable' %}
+    {% include "tabelas.html" %}
+  {% endwith %}
 {% endblock %}
 
 {% block content %}
@@ -23,11 +21,11 @@
 
   {% if professores %}
     <div class="table-responsive">
-      <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm">
+      <table id="ComiteTable" class="table table-bordered table-hover table-sm">
         <thead class="table-info">
           <tr>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
-            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">e-mail</th>
+            <th scope="col" class="text-center">Nome</th>
+            <th scope="col" class="text-center">e-mail</th>
             <th scope="col" class="text-center">Lattes</th>
           </tr>
         </thead>
