--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -9,19 +9,23 @@
 
   {% load static %}
   {% comment %}{% load aderencia_aluno %}{% endcomment %}
-  
-  <script src="{% static 'js/w3.js' %}"></script>
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
+
+  {% with tabela='ProjetosTable' %}
+    {% include "tabelas.html" %}
+  {% endwith %}
 
 {% endblock %}
 
 {% block content %}
 
-  {% with dados='projetos' %}
+  {% comment %}
+    {% with dados='projetos' %}
       {% include "planilhas.html" %}
-  {% endwith %}
+    {% endwith %}
+  {% endcomment %}
 
   <span class="titulo">
     {% if periodo == "todos" %}
@@ -46,25 +50,15 @@
     <option value="próximos" {% if periodo == "próximos" %}selected="selected"{% endif %}>próximos</option>
   </select>
 
-  <span id="informacoes">
-    &nbsp;&nbsp;&nbsp;
-    <b>Informações: </b>&nbsp;
-    <label><input onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Período</label>&nbsp;&nbsp;&nbsp;
-    <label><input onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
-    <label><input onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(4)').show() : $('#ProjetosTable tr > *:nth-child(4)').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
-  </span>
-
-  <br><br>
-
   {% if projetos %}
     <div class="table-responsive">
     <table id="ProjetosTable" class="table table-bordered table-hover table-sm">
       <thead class="table-info">
         <tr>
-          <th scope="col" onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
-          <th scope="col" onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Período</th>
-          <th scope="col" onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-          <th scope="col" onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
+          <th scope="col" class="text-center">Projeto</th>
+          <th scope="col" class="text-center">Período</th>
+          <th scope="col" class="text-center">Orientador</th>
+          <th scope="col" class="text-center">Organização</th>
         </tr>
       </thead>
       {% for projeto in projetos %} 
