aceita caracter especial para espaço em nomes

--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -33,7 +33,7 @@
     <br><br>
 
     <label for="nome">Nome do Usuário<br></label><br>
-    <input type="text" size="80" maxlength="80" id="nome" name="nome" value="{{nome}}" pattern="^\S+(?:[ ]+\S+){1,99}[ ]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" oninput="this.setCustomValidity('')" required><br>
+    <input type="text" size="80" maxlength="80" id="nome" name="nome" value="{{nome}}" pattern="^\S+(?:[\s]+\S+){1,99}[\s]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" oninput="this.setCustomValidity('')" required><br>
     <br><br>
 
     <label for="email">e-mail:</label> <input type="email" size="73" maxlength="73" id="email" name="email" value="{{email}}" oninvalid="this.setCustomValidity('Digite um e-mail válido')" oninput="this.setCustomValidity('')" required><br><br>
