ajustando botão do menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,8 @@
 </head>
 <body>
   {% url 'index' as url_index %}
-  {% url 'index_professor' as url_index_professor %}
-  {% url 'index_estudantes' as url_index_estudante %}
   {% url 'perfil' as url_perfil %}
+
   <div class="topnav">
     <a class="active">
       <img 
@@ -38,22 +37,29 @@
     <div id="myLinks">
       {% if user.is_authenticated %}
         <a href="{% url 'index'%}">Geral</a>
+        <a href="{% url 'calendario'%}">Calendário</a>
         
         {% if user.tipo_de_usuario == 1 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-            <a href="{% url 'index_estudantes' %}"><h5>Área dos Estudantes</h5></a>
+            <a href="{% url 'index_estudantes' %}">Área dos Estudantes</a>
         {% endif %}
+
         {% if user.tipo_de_usuario == 3 or user.tipo_de_usuario == 4 %}
-            <a href="{% url 'index_organizacoes' %}"><h5>Área dos Parceiros</h5></a>
+            <a href="{% url 'index_organizacoes' %}">Área dos Parceiros</a>
         {% endif %}
     
-        {% if perms.users.altera_professor %}<a href="{% url 'index_professor'%}">Professor</a>{% endif %}
-        {% if perms.users.altera_professor %}<a href="{% url 'index_administracao'%}">Administração</a>{% endif %}
+        {% if perms.users.altera_professor %}
+          <a href="{% url 'index_professor'%}">Área do Professor</a>
+          <a href="{% url 'index_operacional'%}">Área Operacional</a>
+          <a href="{% url 'index_administracao'%}">Área Administrativa</a>
 
-        {% if perms.users.altera_professor %}<a href="{% url 'index_propostas'%}">Propostas</a>{% endif %}
-        {% if perms.users.altera_professor %}<a href="{% url 'index_projetos'%}">Projetos</a>{% endif %}
+          <a href="{% url 'index_propostas'%}">Propostas</a>
+          <a href="{% url 'index_projetos'%}">Projetos</a>
+        {% endif %}
 
         <a href="{% url 'index_documentos'%}">Documentos</a>
+
         <a href="{% url 'logout'%}">Logout</a>
+
       {% else %}
         <a href="{% url 'login'%}?next={{request.path}}">Login</a>
       {% endif %} 
