--- a/templates/generic.html
+++ b/templates/generic.html
@@ -44,7 +44,7 @@
     {% endif %}
 
     {% if propostas_lista %}
-        <a href="{% url 'propostas_lista' propostas_lista%}">Lista de todas as propostas</a><br>
+        <a href="{% url 'propostas_apresentadas' %}">Lista de propostas apresentadas</a><br>
     {% endif %}
 
     {% if area_principal %}
