ajustando sistema de ediçã de propostas

--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -179,6 +179,10 @@
       {% endif %}
     {% endif %}
   
+    &nbsp;&nbsp;&nbsp;
+    <input type="checkbox" name="mensagem" value="enviar" checked>
+    <label for="mensagem">enviar mensagem (e-mail) de confirmação</label>
+
   </form>
 
   <p>&nbsp;</p>
